--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,9 @@
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../node_modules/lit/polyfill-support.js"></script>
     <script type="module" src="../my-element.js"></script>
+    <script type="module" src="./my-layout.js"></script>
+    <script type="module" src="./employee-list.js"></script>
+    <script type="module" src="./manage-employee.js"></script>
     <style>
       p {
         border: solid 1px blue;
@@ -15,8 +18,6 @@
     </style>
   </head>
   <body>
-    <my-element>
-      <p>This is child content</p>
-    </my-element>
+    <my-layout></my-layout>
   </body>
 </html>
