--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ING Hubs Case Study</title>
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script src="../node_modules/lit/polyfill-support.js"></script>
   <script type="module" src="./store.js"></script>
   <script type="module" src="./employeeSlice.js"></script>
+  <script type="module" src="./localization.js"></script>
   <script type="module" src="./redux-provider.js"></script>
   <script type="module" src="./layout.js"></script>
   <script type="module" src="./employee-list.js"></script>
